# spotify-summary-stats

./: .gitignore  Cargo.toml  README.md  package.json
assets/: main.css
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/routes/: callback.rs  index.rs  login.rs  mod.rs  top_songs.rs
backend/src/spotify/: helpers.rs
backend/src/types/: app_state.rs  auth_code.rs  mod.rs
public/: index.html
src/: lib.rs  main.rs  templates.rs
src/routes/: auth.rs  callback.rs  index.rs  login.rs  mod.rs  recent_songs.rs  top_songs.rs
src/spotify/: helpers.rs
src/types/: app_error.rs  mod.rs  query_parameters.rs  song.rs
templates/: base.html  error.html  home.html  index.html  login.html
templates/styles/: styles.css
