[package]
name = "wraped"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version="0.7.9", features=["macros"]}
cookie = "0.18.1"
dotenv = "0.15.0"
env_logger = "0.11.6"
rspotify = {version="0.13.3", features=["cli"]}
serde = "1.0.216"
serde_json = "1.0.134"
tokio = {version="1.42.0", features=["rt-multi-thread"]}
tower = "0.5.2"
tower-http = {version="0.6.2", features = ["fs", "trace", "cors"]}
